# autonomous-car-2018

./: .gitignore  README.md  logfile_team806.txt  package.json
An/DATA/videos/: outcpp.avi.REMOVED.git-id
An/DATA/videos/real_env/: DAS_seq04_2mpix.avi.REMOVED.git-id  DAS_seq04_small.avi.REMOVED.git-id
An/src/ict60_racecar/data/: config.yaml  svm.yml.REMOVED.git-id
An/src/ict60_racecar/include/: config.h
An/src/ict60_racecar/include/lane_detector/: lane_detector.h  road.h
An/src/ict60_racecar/include/traffic_sign/: traffic_sign_detector.h
An/src/ict60_racecar/src/: racecar.cpp
An/src/ict60_racecar/src/lane_detector/: lane_detector.cpp
An/src/ict60_racecar/src/traffic_sign/: traffic_sign_detector.cpp
An/traffic_sign_detection/: CMakeLists.txt
An/traffic_sign_detection/include/: timer.h  traffic_sign_detector.h
An/traffic_sign_detection/src/: main.cpp  traffic_sign_detector.cpp
main_ws/: README.md  logfile_ICT60.txt  logfile_Team1.txt  make_debug.sh  run_debug.sh  simulation_v1.sh  simulation_v2.sh  simulation_v4.sh  start_scanmem.sh
main_ws/src/: README.md
main_ws/src/ict60_racecar/: CMakeLists.txt  package.xml
main_ws/src/ict60_racecar/data/: config.yaml  config_trafficsign.yaml
main_ws/src/ict60_racecar/include/: car_control.h  color_range.h  config.h  lane_detector.h  traffic_sign.h  traffic_sign_detector.h  traffic_sign_detector_2.h
main_ws/src/ict60_racecar/include/lane_detector/: lane_detector.h
main_ws/src/ict60_racecar/include/obstacle_detector/: obstacle_detector.h
main_ws/src/ict60_racecar/include/smart_control/: car_control.h
main_ws/src/ict60_racecar/include/traffic_sign/: traffic_sign_detector.h  traffic_sign_detector_2.h
main_ws/src/ict60_racecar/src/: car_control.cpp  lane_detector.cpp  manual_control.cpp  racecar.cpp  timer.cpp  traffic_sign.cpp  traffic_sign_detector.cpp  traffic_sign_detector_2.cpp
main_ws/src/ict60_racecar/src/lane_detector/: lane_detector.cpp
main_ws/src/ict60_racecar/src/smart_control/: car_control.cpp
main_ws/src/ict60_racecar/src/traffic_sign/: traffic_sign_detector.cpp  traffic_sign_detector_2.cpp
main_ws/src/team806/: CMakeLists.txt
main_ws/src/team806/data/: config.yaml  config_trafficsign.yaml
main_ws/src/team806/include/: config.h  image_publisher.h
main_ws/src/team806/include/lane_detector/: lane_detector.h
main_ws/src/team806/include/object_detector/: detected_object.h  hog_based_object_detector.h  object_detector.h  object_detector_manager.h  object_filter.h  templ_matching_object_detector.h
main_ws/src/team806/include/obstacle_detector/: obstacle_detector.h
main_ws/src/team806/include/smart_control/: car_control.h
main_ws/src/team806/include/traffic_sign/: traffic_sign.h  traffic_sign_detector.h  traffic_sign_detector_2.h
main_ws/src/team806/launch/: team806.launch
main_ws/src/team806/src/: racecar.cpp
main_ws/src/team806/src/lane_detector/: lane_detector.cpp
main_ws/src/team806/src/object_detector/: hog_based_object_detector.cpp  object_detector_manager.cpp  templ_matching_object_detector.cpp
main_ws/src/team806/src/obstacle_detector/: obstacle_detector.cpp
main_ws/src/team806/src/smart_control/: car_control.cpp
main_ws/src/team806/src/traffic_sign/: traffic_sign_detector.cpp  traffic_sign_detector_2.cpp
scripts/: download-all-simulators.sh  download-gdrive.sh  download-simulator1.sh  download-simulator2.sh  download-simulator3.sh  download-simulator4.sh  download-svm-file-trafficsign-detector-2.sh
tmp/: svm_trafficsign_legacy.zip.REMOVED.git-id
watershed_experiment/: CMakeLists.txt  main.cpp  main2  main2.cpp
